[workspace]

[package]
name = "ethercat"
version = "0.2.0"
description = "Binding to the IgH/Etherlab open-source EtherCAT master"
keywords = ["ethercat", "master", "etherlab", "fieldbus", "automation"]
authors = ["Georg Brandl <g.brandl@fz-juelich.de>", "slowtec GmbH <post@slowtec.de>"]
repository = "https://github.com/ethercat-rs/ethercat"
readme = "README.md"
license = "MIT/Apache-2.0"
edition = "2018"

[dependencies]
derive-new = "0.5"
ethercat-sys = { path = "ethercat-sys", version = "0.2" }
ethercat-types = "0.3"
libc = "0.2"
log = "0.4"
memmap = "0.7"
num-traits = "0.2"
thiserror = "1.0"

[dev-dependencies]
ethercat-esi = "*"
env_logger = "*"

[features]
default = []

# Enable this feature to use it with the
# synapticon branch `release/v1.5.2-sncn-11`
# at https://github.com/synapticon/Etherlab_EtherCAT_Master
sncn = ["ethercat-sys/sncn"]

# Enable this feature to use pregenerated bindings.
# CAUTION: If your kernel module was not built
# with the corresponding version, it might break your application.
pregenerated-bindings = ["ethercat-sys/pregenerated-bindings"]

[package.metadata.docs.rs]
features = [ "pregenerated-bindings" ]

[badges]
maintenance = { status = "actively-developed" }
