[package]
name = "ethercat-derive"
description = "Automatic deriving of traits in the ethercat-plc crate"
version = "0.1.1"
authors = ["Georg Brandl <g.brandl@fz-juelich.de>"]
license = "GPL-2.0+"
edition = "2018"

[lib]
proc-macro = true

[dependencies]
quote = "0.6.11"
syn = "0.15.27"
proc-macro2 = "0.4.27"
