[package]
name = "ethercat-plc"
version = "0.1.0"
authors = ["Georg Brandl <g.brandl@fz-juelich.de>"]
edition = "2018"

[dependencies]
log = "0.4"
libc = "0.2"
time = "0.1"
mlzlog = "0.5.1"
byteorder = "1.2"
crossbeam-channel = "0.3.6"
ethercat = { path = "../ethercat" }
ethercat-derive = { path = "../ethercat-derive" }
