[package]
name = "ethercat-sys"
description = "Binding to the Etherlab open-source EtherCAT master"
keywords = ["ethercat", "master", "etherlab", "binding"]
version = "0.1.3"
authors = ["Georg Brandl <g.brandl@fz-juelich.de>"]
license = "MIT/Apache-2.0"
edition = "2018"

[dependencies]
nix = "0.17"

[build-dependencies]
bindgen = "0.53"
