[package]
name = "ethercat-sys"
description = "Binding to the Etherlab open-source EtherCAT master"
keywords = ["ethercat", "master", "etherlab", "binding"]
version = "0.3.1"
authors = ["Georg Brandl <g.brandl@fz-juelich.de>", "slowtec GmbH <post@slowtec.de>"]
repository = "https://github.com/ethercat-rs/ethercat"
license = "MIT/Apache-2.0"
edition = "2018"

[dependencies]
ioctl-sys = "0.5.2"

[build-dependencies]
bindgen = "0.69.0"
regex = "=1.9.6"
# for 1.63 compatibility
home = "=0.5.5"

[features]
default = []

# Enable this feature to use it with the
# synapticon branch `release/v1.5.2-sncn-11`
# at https://github.com/synapticon/Etherlab_EtherCAT_Master
sncn = []

# Enable this feature to use pregenerated bindings.
# CAUTION: If your kernel module was not built
# with the corresponding version, it might break your application.
pregenerated-bindings = []

[package.metadata.docs.rs]
features = [ "pregenerated-bindings" ]

[badges]
maintenance = { status = "actively-developed" }
